Added swagger for project,scan,integrator,vuln  APIs
